# job-gap-challenge

./: .gitignore  README.md  main.py  pyproject.toml
cli/: job_applications.py  main.py
cli/configs/: browser-options.yaml
cli/resources/: data.json
scripts/: uv-setup.sh
src/: browser.py  exceptions.py  logging.py  typing.py  utils.py
src/generics/: applications.py
src/generics/form_agents/: base.py  google.py
src/specifics/: schemas.py
src/specifics/form_agents/: google.py
